welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: expected class or object definition
def positionFinale():Boolean = {
^Diagonal:22: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:25: error: expected start of definition
	override def forward()  {
                 ^Diagonal:28: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:31: error: expected start of definition
	override def backward() {
                 ^Diagonal:34: error: Unmatched closing brace '}' ignored here
}
^